--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.yaoxiang</groupId>
-    <artifactId>demo1</artifactId>
+    <artifactId>feigninvokerdemo</artifactId>
     <version>0.0.1</version>
     <packaging>jar</packaging>
     <name>feigninvokerdemo</name>
